@@ -10,6 +10,7 @@ Performance Testing:
     1. Mixed traffic support.
     2. Graphs are saved to the home directory.
     3. Added Axis label to X axis.
+    4. CLI support for mixed mode.
 
 Features:
 
